WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93289
If the Apple Java plug-in is blocked and no runtime is installed, don't load it
https://bugs.webkit.org/show_bug.cgi?id=93289
Summary
If the Apple Java plug-in is blocked and no runtime is installed, don't load it
Anders Carlsson
Reported
2012-08-06 12:15:47 PDT
If the Apple Java plug-in is blocked and no runtime is installed, don't load it
Attachments
Patch
(168.75 KB, patch)
2012-08-06 12:36 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(169.49 KB, patch)
2012-08-06 12:47 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-08-06 12:36:01 PDT
Created
attachment 156744
[details]
Patch
Anders Carlsson
Comment 2
2012-08-06 12:47:28 PDT
Created
attachment 156748
[details]
Patch
mitz
Comment 3
2012-08-06 13:38:07 PDT
Comment on
attachment 156748
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=156748&action=review
> Source/WebKit2/UIProcess/Plugins/mac/PluginInfoStoreMac.mm:128 > + // If the Apple Java plug-in is block and we don't have a Java runtime installed, just pretend that the plug-in doesn't exist.
Typo: “block”.
> WebKitLibraries/ChangeLog:13 > + * libWebKitSystemInterfaceSnowLeopard.a:
I don’t think this one is needed.
Anders Carlsson
Comment 4
2012-08-06 13:42:45 PDT
Committed
r124799
: <
http://trac.webkit.org/changeset/124799
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug